--- a/beast_scheme/package/add/condition_reflex.htm
+++ b/beast_scheme/package/add/condition_reflex.htm
@@ -29,7 +29,8 @@
     <td><img src="../../img/Condition_reflex.png" width="928" height="1389" border="0" alt="Условный рефлекс"></td>
   </tr>
 </table>
-Пример формирования условного рефлекса:
+Так как Условные рефлексы строятся на базе Безусловных, то их создание возможно только начиная со стадии 1. Пример формирования 
+Условного рефлекса:
 <ul>
   <li>Оператор (отправляет текст с Пульта): привет</li>
   <li>Beast: нет реакции</li>
