--- a/beast_scheme/package/add/reflex_tree.htm
+++ b/beast_scheme/package/add/reflex_tree.htm
@@ -11,8 +11,9 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Безусловные рефлексы</h1>
 </div>
 Безусловные рефлексы у Beast – это жестко запрограммированные реакции на действия кнопок с Пульта. Устанавливаются на 
-  странице Рефлексы http://go/pages/reflexes.php через заполнение справочников и шаблонов. По аналогии с природной нервной 
-  системой это закрепленные эволюционным отбором не изменяемые реакции.</p>
+  странице Рефлексы http://go/pages/reflexes.php через заполнение справочников и шаблонов в стадии 0. При переходе в 
+  следующие стадии не рекомендуется менять рефлексы, так как по аналогии с природной нервной системой это закрепленные 
+  эволюционным отбором не изменяемые реакции.</p>
 Рефлекторное реагирование происходит разово при возникновении пусковых условий, формирующих итоговый Образ восприятия 
   TriggerStimulsArr из трех уровней:
 <ol>
@@ -21,10 +22,10 @@
   <li><b>Изменение Пусковых стимулов</b> - если было активировано сочетание кнопок действий с пульта</li>
 </ol>
 Комбинация трех уровней Образа восприятия учитываются только в порядке, указанном выше, задавая тем самым 
-  древовидную структуру Образа восприятия. 
-  Это означает, что возможны комбинации Базового Состояния и Базовых контекстов, без учета Пусковых стимулов, 
-  но не возможны комбинации Базового Состояния и Пусковых стимулов без учета Базовых контекстов. Образ восприятия 
-  всегда формируется в порядке: Базовое Состояние – Базовые контексты – Пусковые стимулы.</p>
+  древовидную структуру Образа восприятия. Это означает, что возможны комбинации Базового Состояния и Базовых 
+  контекстов, без учета Пусковых стимулов, но не возможны комбинации Базового Состояния и Пусковых стимулов 
+  без учета Базовых контекстов. Образ восприятия всегда формируется в порядке: Базовое Состояние – Базовые 
+  контексты – Пусковые стимулы.</p>
 <table>
   <tr>
     <td><img src="../../img/Reflex_tree.png" width="948" height="1432" border="0" alt="Дерево безусловных рефлексов"></td>
