--- a/beast_scheme/beast.htm
+++ b/beast_scheme/beast.htm
@@ -53,7 +53,14 @@
 <li><a href="package/understanding_situation_image.htm">understanding_situation_image</a> - образ текущей ситуации.</li>
 <li><a href="package/understanding_tree.htm">understanding_tree</a> - дерево понимания.</li>
 <li><a href="package/verbal_Broca_img.htm">verbal_Broca_img</a> - словестные образы (область Брока).</li>
-
+<br>
+<br>
+Список основных функций: <a href="funcList.htm">список</a><br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 
