--- a/beast_scheme/funcList.htm
+++ b/beast_scheme/funcList.htm
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Список основных функций Beast</title>
+  <link rel="stylesheet" href="sys/common.css">
+</head>
+<body style="margin-left:20px;font-family:arial;font-size:14px;width:1000px;">
+<div style="position:relative;height:20px;margin-bottom:20px;">
+<a href="index.htm"><img src="img/home.png" style="position:absolute;top:0;left:0;" title="На главную."></a>
+<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Список основных функций Beast</h1>
+</div>
+
 <li><a href='funcs/CreateNewlastActionsImageID.htm'>CreateNewlastActionsImageID</a> - Создать новое сочетание совокупного образа действий (оператора или Beast) если такого еще нет</li>
 <li><a href='funcs/SaveActionsImageArr.htm'>SaveActionsImageArr</a> - Сохранить образы сочетаний ответных действий</li>
 <li><a href='funcs/loadActionsImageArr.htm'>loadActionsImageArr</a> - Загрузить образы сочетаний ответных действий</li>
@@ -79,18 +92,9 @@
 <li><a href='funcs/getGreatestImportance.htm'>getGreatestImportance</a> - Найти наиболее значащие обхекты в данных условиях</li>
 <li><a href='funcs/getTopAttentionObject.htm'>getTopAttentionObject</a> - Выбрать один, самый актуальный объект</li>
 <li><a href='funcs/sys/common.css'>sys/common</a> - Запрос с Пульта: 
+<b>func main</b> - Пакет для функции main<br>
 
-<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Пакет для функции main</h1>
-</div>
-<b>func main</b><br>
 
-В функции main обеспечивается:
-<li>начальная инициализация</li>
-<li><a href='funcs/../index.htm'>../index</a> - 
-
-<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Пакет для функции main</h1>
-</div>
-<b>func main</b><br>
 
 В функции main обеспечивается:
 <li>начальная инициализация</li>
@@ -238,23 +242,6 @@
 <li><a href='funcs/addShortTermMemory.htm'>addShortTermMemory</a> - Добвить goNext в кратковременную память</li>
 <li><a href='funcs/SleepPuls.htm'>SleepPuls</a> - Синхронизация процесса сна</li>
 <li><a href='funcs/prepareWordArr.htm'>prepareWordArr</a> - Обработка накопившегося массива распознанных фраз, бъекты PurposeGeneticObject, объекты внимания высокой значимости и эпизодической памяти</li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
-<li><a href='funcs/xxxxx.htm'>xxxxx</a> - </li>
 <li><a href='funcs/TermineteActionCountPuls.htm'>TermineteActionCountPuls</a> - Коррекция текущего состояния гомеостаза и базового контекста с каждым пульсом по результату действия</li>
 <li><a href='funcs/loadTerminalActons.htm'>loadTerminalActons</a> - Загрузить образы действий из файла</li>
 <li><a href='funcs/SaveTerminalActons.htm'>SaveTerminalActons</a> - Сохранить массив действий в файл</li>
@@ -307,3 +294,8 @@
 <li><a href='funcs/SetNewPhraseTreeNode.htm'>SetNewPhraseTreeNode</a> - Вставка новой фразы со вставкой новых слов фразы, так что фраза будет распознанна всегда.</li>
 <li><a href='funcs/PhraseDetection.htm'>PhraseDetection</a> - Проход одной фразыраспознавание ID слов фразы</li>
 <li><a href='funcs/GetPhraseStringsFromPhraseID.htm'>GetPhraseStringsFromPhraseID</a> - Строка из ID фразы дерева фраз</li>
+<br>
+<br>
+<br>
+<br>
+<br>
