--- a/beast_scheme/funcs/VerbalDetection.htm
+++ b/beast_scheme/funcs/VerbalDetection.htm
@@ -13,10 +13,9 @@
 </div>
 
 <b>Запрос с Пульта: Текст из окна ввода с пульта</b><br>
-
 <br>
 
-<br>
+Дополнительно: <a href="../package/add/sensor_tree.htm">Вербальный детектор</a><br><br>
 <b>Функция вызывается из:</b>
 <li><a href="main.htm">main</a></li>
 
