--- a/beast_scheme/funcs/badDetecting.htm
+++ b/beast_scheme/funcs/badDetecting.htm
@@ -12,7 +12,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция badDetecting</h1>
 </div>
 
-<b>Определение текущего состояния по каждому базовому параметру, затемобщее интегральное состояние</b><br>
+<b>Определение текущего состояния по каждому базовому параметру, затем <a href="../package/add/integral_bs.htm">общее интегральное состояние</a></b><br>
 <br>
 Распознаватели отклонения жизненных параметров GomeostazParams[id] от нормы.<br>
 Есть детекторы по каждому из жизненных параметров
@@ -25,8 +25,8 @@
 В природе чем сильнее голод, тем сильнее Хорошо с началом его удовлетворения и это Хорошо уменьшается с насыщением.<br>
 Но если еды было мало, то тварь довольно скоро опять почувствует голод, но уже не такой большой.
 <br>
-
 <br>
+Дополнительно: <a href="../package/add/base_param.htm">Базовые потребности</a><br><br>
 <b>Функция вызывается из:</b>
 <li>GomeostazPuls - коррекция текущего состояния гомеостаза и базового контекста с каждым пульсом</li>
 
