--- a/beast_scheme/funcs/gomeostazUpdate.htm
+++ b/beast_scheme/funcs/gomeostazUpdate.htm
@@ -11,13 +11,9 @@
 <a href="../package/gomeostas.htm"><img src="../img/package.png" style="position:absolute;top:0;left:50px;" title="Пакет gomeostas."></a>
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция gomeostazUpdate</h1>
 </div>
+Скорректировать текущее состояние гомеостаза</p>
 
-<b> скорректировать текущее состояние гомеостаза</b><br>
-
-<br>
-
-<br>
+Дополнительно: <a href="../package/add/integral_bs.htm">Интегральная оценка Базового состояния гомеостаза</a>
+</p>
 <b>Функция вызывается из:</b>
 <li><a href="GomeostazPuls.htm">GomeostazPuls</a> - ПУЛЬС ГОМЕОСТАЗА - обработка раз в секунду</li>
-
-
