--- a/beast_scheme/beast.htm
+++ b/beast_scheme/beast.htm
@@ -55,6 +55,15 @@
 <li><a href="package/verbal_Broca_img.htm">verbal_Broca_img</a> - словестные образы (область Брока).</li>
 <br>
 <br>
+Поясняющие схемы:
+<li><a href="package/add/base_param.htm">базовые потребности</a></li>
+<li><a href="package/add/integral_bs.htm">интегральное базовое состояние</a></li>
+<li><a href="package/add/sensor_tree.htm">дерево сенсоров</a></li>
+<li><a href="package/add/reflex_tree.htm">безусловные рефлексы</a></li>
+<li><a href="package/add/condition_reflex.htm">условные рефлексы</a></li>
+<li><a href="package/add/automatism_tree.htm">дерево автоматизмов</a></li>
+<br>
+<br>
 Список основных функций: <a href="funcList.htm">список</a><br>
 <br>
 <br>
