--- a/beast_scheme/package/add/automatism_tree.htm
+++ b/beast_scheme/package/add/automatism_tree.htm
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Дерево автотматизмов</title>
+  <title>Дерево автоматизмов</title>
   <link rel="stylesheet" href="sys/common.css">
 </head>
 <body style="margin-left:20px;font-family:arial;font-size:14px;width:1000px;">
 <div style="position:relative;height:20px;margin-bottom:20px;">
 <a href="../../index.htm"><img src="../../img/home.png" style="position:absolute;top:0;left:0;" title="На главную."></a>
-<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Дерево автотматизмов</h1>
+<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Дерево автоматизмов</h1>
 </div>
 Дерево автоматизмов по аналогии с Деревом рефлексов является сложным составным Пусковым стимулом (Образом восприятия) 
 с жесткой иерархией, задающей уровни активации. Для автоматизма их 6:
