--- a/beast_scheme/package/add/integral_bs.htm
+++ b/beast_scheme/package/add/integral_bs.htm
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Базовое состояние</title>
+  <title>Интегральное Базовое состояние</title>
   <link rel="stylesheet" href="sys/common.css">
 </head>
 <body style="margin-left:20px;font-family:arial;font-size:14px;width:1000px;">
 <div style="position:relative;height:20px;margin-bottom:20px;">
 <a href="../../index.htm"><img src="../../img/home.png" style="position:absolute;top:0;left:0;" title="На главную."></a>
-<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Базовое состояние</h1>
+<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Интегральное Базовое состояние</h1>
 </div>
 В текущей версии Beast используется интегральная оценка отклонений от пороговых значений Базовых потребностей. Это означает, что уровни 
 отклонений BadValue по каждой Базовой потребности суммируются со знаком и сравниваются интегральным Порогом CompareLevel. Если суммарное 
